tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_inline_attribute_on_unconstrained/execute__tests__noirc_frontend_tests_deny_inline_attribute_on_unconstrained_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: misplaced #[no_predicates] attribute on unconstrained function foo. Only allowed on constrained functions
  ┌─ src/main.nr:2:9
  │
2 │         #[no_predicates]
  │         ---------------- misplaced #[no_predicates] attribute
  │
  = The `#[no_predicates]` attribute specifies to the compiler whether it should diverge from auto-inlining constrained functions

Aborting due to 1 previous error
